--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,7 @@ jobs:
           cd build
           cmake ..
           make
+      - name: Run
+        run: | 
+          cd build
+          ./ukulele
